# Domdhi.Crypto

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  coins.example.json  config.example.json  pyproject.toml  ruff.toml
.claude/: README.md  gate.config.json  guardrail-rules.yaml  settings.json  version.json
.claude/agents/: architect.md  code-reviewer.md  doc-writer.md  general-purpose.md  playwright.md  product-strategist.md  project-planner.md  qa-engineer.md  security-auditor.md  shadow.md  ux-designer.md
.claude/commands/: brainstorm.md  do.md  end.md  evolve.md  interview.md  investigate.md  listen.md  onboard.md  prime.md  remember.md  research.md  run-tests.md  run-todo.md  sweep.md  todo.md  triage.md
.claude/core/: cleanup-logs.js  commit.js  constants.js  council.js  daily-log.js  decision-viz.js  feedback-digest.js  gate.js  gen-timeline.js  guardrail-stats.js  handoff-path.js  install.js  memory-benchmark.js  memory-compiler.js  memory-curator.js  memory-eval.js  memory-extractor.js  memory-health-check.js  memory-ingester.js  memory-manager-cli.js  memory-manager.js  memory-promoter.js  memory-stability.js  metrics.js  package.json  profile.js  scaffold.js  skill-analytics.js  skill-conformance.js  skill-eval.js  skill-evolution.js  status.js  statusline.sh  telemetry-log.js  template-updater.js
.claude/hooks/: command-usage-logger.cjs  commit-guard.cjs  damage-control.cjs  edit-capture.cjs  guardrail.cjs  memory-capture.cjs  memory-guard.cjs  organize.cjs  path-guardrail.cjs  post-read-scrubber.cjs  pre-compaction-archive.cjs  secret-patterns.cjs  secret-scanner.cjs  session-start-prime.cjs  skill-usage-logger.cjs
.claude/templates/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: CLAUDE.md  TODO_DomdhiCrypto.md  _project-architecture.md  _project-context.md  _project-requirements.md  _project-timeline.md  _slice-architecture.md
docs/design/: _design.light.md  (+3 more)
tests/: test_arena.py  test_backtest_attribution.py  test_backtest_data_provider.py  test_backtest_engine.py  test_backtest_execution_simulator.py  test_backtest_types.py  test_backtest_virtual_account.py  test_cli.py  test_coingecko.py  test_context.py  test_dashboard.py  test_db.py  test_decision.py  test_digest.py  test_effectiveness.py  test_factors.py  test_ledger.py  test_mcp_server.py  test_paths.py  test_pipeline_e2e.py  test_risk.py  test_ta.py  test_walkforward.py
(+295 files in other folders)
